<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".CompetenceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="67dp"
            android:layout_height="109dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:src="@drawable/itachi2"></ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="32dp"
                android:text="@string/nom" />

            <TextView
                android:id="@+id/textViewphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/numero" />

            <TextView
                android:id="@+id/textViewadress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/email" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"
        android:text="@string/Langue1" />

    <ListView
        android:id="@+id/listViewLanguages"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="1dp"
        tools:listitem="@layout/item_langage"/>


    <TextView
        android:id="@+id/textViewProject"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:textSize="32dp"
        android:textColor="@color/white"
        android:text="@string/Projet" />

    <ListView
        android:id="@+id/listViewProject"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        tools:listitem="@layout/item_projet" />

    <Button
        android:id="@+id/buttonExpérience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exprériences" />

</LinearLayout>