<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/itachi2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:textColor="@color/white"
                android:text="@string/nom" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/prenom" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/numero" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32dp"
        android:background="@color/design_default_color_primary"
        android:text="Expériences" />

    <ListView
        android:id="@+id/listViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience"
        />

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:textSize="32dp"
        android:text="Formation" />

    <ListView
        android:id="@+id/listViewFormations"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/formation"/>

    <Button
        android:id="@+id/buttonCompetences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        android:text="Compétences" />
</LinearLayout>